cluster/apps/networking/smokeping/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: networking
  name: smokeping
  labels:
    app: smokeping
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: smokeping
