cluster/apps/networking/smokeping/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: networking
  labels:
    app: smokeping
  name: smokeping
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    hajimari.io/enable: "true"
    hajimari.io/icon: "smoke"
spec:
  tls:
  - hosts:
    - smoke.${SECRET_DOMAIN_INTERNAL}
    secretName: "${SECRET_DOMAIN_INTERNAL/./-}-tls"
  rules:
  - host: smoke.${SECRET_DOMAIN_INTERNAL}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smokeping
            port:
              number: 80
